fix: removed z-index

--- a/draft-packages/badge/KaizenDraft/Badge/styles.module.scss
+++ b/draft-packages/badge/KaizenDraft/Badge/styles.module.scss
@@ -21,7 +21,6 @@ $small: $ca-grid;
   padding: 1px $kz-spacing-xs;
   min-width: 8px;
   text-align: center;
-  z-index: 2;
 }
 
 .default {
